fix: update selectors for collapsed tail styles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -2103,7 +2103,7 @@ OM = _omsg
                 /// Some links have TWO empty headers.
                 a.selectable-text[href],
                 /// Embedded links are special snowflakes, too.
-                .eRacY[dir = 'ltr'] > [dir = 'ltr'] {
+                ._1VzZY[dir = 'ltr'] > [dir = 'ltr'] {
                     &::before, &::after { content: unset i }
                 }
             }
@@ -2125,7 +2125,7 @@ OM = _omsg
                 /// Apparently messages with images/videos are treated like
                 /// special snowflakes, so this resets their timestamps.
                 [style *= 'width'], .video-thumb {
-                    + div > .eRacY[dir = 'rtl'] { padding-bottom: 0.8rem i }
+                    + div > ._1VzZY[dir = 'rtl'] { padding-bottom: 0.8rem i }
                 }
                 /// Remove whitespace for links.
                 .message-text-link::after { content: unset i }
@@ -2134,8 +2134,8 @@ OM = _omsg
 
         /// Feat -> Collapse messages for `fb-like` tail style.
         if (fb_compact && tail_style == 'fb-like') {
-            rtl = '.eRacY[dir = "rtl"]'
-            ltr = '._2oWZe'
+            rtl = '._1wlJG[dir = "rtl"]'
+            ltr = '._3ysB9'
 
             &-in, &-out {
                 /// LTR whitespace.
